# housing-nyc

./: .gitignore  README.md  pyproject.toml
gis/: QGIS Setup.md  qgis.qgz
housing_nyc/: __init__.py  backend.py  postgres.py  transit.py
housing_nyc/utils/: globals.py  mydifflib.py  paths.py
notebooks/: 20220717-development.ipynb  20220807-sales-bblbldg.ipynb  20221101-walk-network.ipynb  20221113-load-walk-network.ipynb  20221114-explore-walk-network.ipynb  20221127-integrate-osm-urbanaccess.ipynb  20221209-explore-integrated-network.ipynb
tests/: test_housing_nyc.py
