[tool.poetry]
name = "housing-nyc"
version = "0.1.0"
description = ""
authors = ["vukevint <vu.kevin.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nycdb = {path = "../nycdb/src", develop=true}
pandas = "^1.3.5"
usaddress = "^0.5.10"
usaddress-scourgify = "^0.2.4"
configparser = "^5.2.0"
psycopg2 = "^2.9.3"
urbanaccess = "^0.2.2"
numpy = "^1.23.1"
osmnx = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
